--- a/templates/index.html
+++ b/templates/index.html
@@ -190,7 +190,7 @@
                     (item) => `
                   <div class="result-item">
                     <img class="image" src="${item.path}">
-                    <p>Similarity: ${item.similarity.toFixed(4)}</p>
+                    <p>Distance: ${item.similarity.toFixed(4)}</p>
                   </div>
                 `
                   )
